# Task3

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/backend/Module1_HarrisDetector/: HarrisDetector.cpp  HarrisDetector.h
src/backend/Module2_LambdaDetector/: LambdaDetector.cpp  LambdaDetector.h
src/backend/Module3_SIFTDescriptor/: SIFTDescriptor.cpp  SIFTDescriptor.h
src/backend/Module4_SSDMatching/: SSDMatcher.cpp  SSDMatcher.h
src/backend/Module5_NCCMatching/: NCCMatcher.cpp  NCCMatcher.h
src/backend/core/: DrawingUtils.cpp  DrawingUtils.h  ImageUtils.cpp  ImageUtils.h  MathUtils.cpp  MathUtils.h  TimingUtils.h
src/frontend/: MainWindow.cpp  MainWindow.h
src/frontend/components/: ImagePanel.cpp  ImagePanel.h  ParameterBox.cpp  ParameterBox.h  TopTaskBar.cpp  TopTaskBar.h
src/frontend/controllers/: AppController.cpp  AppController.h  ImageStateManager.cpp  ImageStateManager.h
src/frontend/ui/: MainWindow.ui
